--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client": "npm run dev --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "Dario Benitez",
+  "author": "Rodrigo Perez",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
